adding preview feature

--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
     "next": "15.0.3",
+    "pdfjs-dist": "^2.16.105",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-doc-viewer": "^0.1.14",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-pdf": "^9.1.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
